      .shares[][].fairshare.factor
      .shares[][].fairshare.level
    for endpoints:
      'GET /slurm/v0.0.42/shares'
    and for commands:
      sshare --json
      sshare --yaml
 -- data_parser/v0.0.42 - Avoid dumping "Infinity" for NO_VAL tagged "number"
    fields.
 -- Add TopologyParam=TopoMaxSizeUnroll=# to allow --nodes=<min>-<max> for
    topology/block.

* Changes in Slurm 24.05.4
==========================
 -- Fix generic int sort functions.
 -- Fix user look up using possible unrealized uid in the dbd.
 -- Fix FreeBSD compile issue with tls/none plugin.
 -- slurmrestd - Fix regressions that allowed slurmrestd to be run as SlurmUser
    when SlurmUser was not root.
 -- mpi/pmix fix race conditions with het jobs at step start/end which could
    make srun to hang.
 -- Fix not showing some SelectTypeParameters in scontrol show config.
 -- Avoid assert when dumping removed certain fields in JSON/YAML.
 -- Improve how shards are scheduled with affinity in mind.
 -- Fix MaxJobsAccruePU not being respected when MaxJobsAccruePA is set
    in the same QOS.
 -- Prevent backfill from planning jobs that use overlapping resources for the
    same time slot if the job's time limit is less than bf_resolution.
 -- Fix memory leak when requesting typed gres and --[cpus|mem]-per-gpu.
 -- Prevent backfill from breaking out due to "system state changed" every 30
    seconds if reservations use REPLACE or REPLACE_DOWN flags.
 -- slurmrestd - Make sure that scheduler_unset parameter defaults to true even
    when the following flags are also set: show_duplicates, skip_steps,
    disable_truncate_usage_time, run_away_jobs, whole_hetjob,
    disable_whole_hetjob, disable_wait_for_result, usage_time_as_submit_time,
    show_batch_script, and or show_job_environment. Additionaly, always make
    sure show_duplicates and disable_truncate_usage_time default to true when
    the following flags are also set: scheduler_unset, scheduled_on_submit,